--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+            android:name=".di.WireApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
@@ -12,7 +13,6 @@
             android:theme="@style/AppTheme">
         <activity
                 android:name=".characterlist.CharacterListActivity"
-                android:label="@string/app_name"
                 android:theme="@style/AppTheme.NoActionBar"
                 android:exported="true">
             <intent-filter>
