--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 
-
 buildscript {
     ext.kotlin_version = '1.7.20'
     repositories {
@@ -11,6 +10,10 @@ buildscript {
         classpath 'com.android.tools.build:gradle:7.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
+}
+
+plugins {
+    id("com.google.dagger.hilt.android") version "2.44" apply false
 }
 
 allprojects {
