--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,10 @@ android {
         }
     }
     buildFeatures {
-        viewBinding true
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.3.2'
     }
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
@@ -30,7 +33,11 @@ android {
 }
 
 dependencies {
+    def composeBom = platform('androidx.compose:compose-bom:2022.10.00')
+    implementation(composeBom)
+
     def lifecycle_version = "2.5.1"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.5.1'
@@ -40,6 +47,20 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1")
     implementation("com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0")
+    implementation "androidx.compose.runtime:runtime"
+
+    implementation "androidx.compose.ui:ui"
+    implementation "androidx.compose.foundation:foundation"
+    implementation "androidx.compose.foundation:foundation-layout"
+    implementation "androidx.compose.ui:ui-tooling"
+    implementation("io.coil-kt:coil-compose:2.2.2")
+    implementation("androidx.navigation:navigation-compose:2.5.3")
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.0-alpha03"
+    implementation "com.google.accompanist:accompanist-navigation-animation:0.24.5-alpha"
+    implementation "com.google.accompanist:accompanist-themeadapter-material3:0.28.0"
+    implementation "androidx.compose.material3:material3:1.1.0-alpha03"
+    implementation("androidx.hilt:hilt-navigation-compose:1.0.0")
+
     def coroutines_version = "1.6.4"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
