--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,30 +20,37 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
     buildFeatures {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
+        kotlinCompilerExtensionVersion '1.4.7'
     }
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
     }
+    configurations.all {
+        resolutionStrategy.force "androidx.compose.animation:animation:1.4.0"
+    }
+
 }
 
 dependencies {
-    def composeBom = platform('androidx.compose:compose-bom:2022.10.00')
+    def composeBom = platform('androidx.compose:compose-bom:2023.04.01')
     implementation(composeBom)
 
     def lifecycle_version = "2.5.1"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1")
     implementation("com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0")
@@ -52,13 +59,13 @@ dependencies {
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.foundation:foundation"
     implementation "androidx.compose.foundation:foundation-layout"
-    implementation "androidx.compose.ui:ui-tooling"
+    implementation "androidx.compose.ui:ui-tooling-preview"
     implementation("io.coil-kt:coil-compose:2.2.2")
     implementation("androidx.navigation:navigation-compose")
-    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.0-alpha03"
-    implementation "com.google.accompanist:accompanist-navigation-animation:0.24.5-alpha"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.1"
+    implementation "com.google.accompanist:accompanist-navigation-animation:0.29.0-alpha"
     implementation "com.google.accompanist:accompanist-themeadapter-material3:0.28.0"
-    implementation "androidx.compose.material3:material3:1.1.0-alpha03"
+    implementation "androidx.compose.material3:material3:1.2.0-alpha01"
     implementation("androidx.hilt:hilt-navigation-compose:1.1.0-alpha01")
 
     def coroutines_version = "1.6.4"
@@ -68,15 +75,16 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version")
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test:runner:1.5.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test:runner:1.5.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.fragment:fragment-ktx:1.5.5'
+    implementation 'androidx.fragment:fragment-ktx:1.5.7'
     testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
     implementation("com.google.dagger:hilt-android:2.44")
     kapt("com.google.dagger:hilt-android-compiler:2.44")
     testImplementation 'org.mockito:mockito-inline:2.13.0'
+    debugImplementation "androidx.compose.ui:ui-tooling"
 }
 
 kapt {
